[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
authors = [
   { name = "Diego Sanchez", email = "ds973@cornell.edu"},
]
name = "CryoJoltz"
version = "0.0.1"
dependencies = [
    "numpy",
    "cryojax",
    "boltz",
    "jax",
    "jaxlib",
    "equinox",
    "joltz"
]
